@@ -528,6 +528,7 @@ option \verb|-force| described below.
 \item The exit code is 0 if no difference was detected, 1 if there
   was. Other exit codes mean some failure in running the replay.
 \item Option \verb|-s| suppresses the output of the final tree view.
+\item Option \verb|-q| runs quietly (no progress info)
 \item Option \texttt{-I \textsl{<path>}} adds \texttt{\textsl{<path>}} to the loadpath.
 \item Option \verb|-force| enforces saving the session, if all proof
   attempts replayed correctly, even if some goals are not proved.
