@@ -2734,7 +2734,7 @@
      edited="blocking_semantics5_WP_wp_soundness_1.v"
      obsolete="false"
      archived="false">
-     <result status="valid" time="0.83"/>
+     <result status="valid" time="0.70"/>
     </proof>
    </goal>
   </theory>
