@@ -1,5 +1,7 @@
 * marks an incompatible change
 
+  o new warning: form exists x, P -> Q
+  o [replayer] new option -q
   o [Provers] support for Coq 8.4
   o New scheme for Coq realizations, using type classes
 
